--- a/2 Fall 2024/1 ECE 360 A01 B05/1 Q-As/TEX/RHCriterion.tex
+++ b/2 Fall 2024/1 ECE 360 A01 B05/1 Q-As/TEX/RHCriterion.tex
@@ -114,13 +114,49 @@ Here, the first column contains alternating signs (1, -2, 1, -4), indicating \te
 
 \section{Example 3: Stable System with Higher Order}
 
-Consider the characteristic equation:
-\begin{equation}
+Consider the fourth-order characteristic equation:
+$$
 T(s) = s^4 + 4s^3 + 2s^2 + 4s + 1 = 0
-\end{equation}
+$$
 
-The Routh array is:
-\[
+To determine stability, let's construct the Routh array:
+
+1) First row ($s^4$): Coefficients of $s^4$, $s^2$, $s^0$
+$$
+1 \quad 2 \quad 1
+$$
+
+2) Second row ($s^3$): Coefficients of $s^3$, $s^1$
+$$
+4 \quad 4 \quad 0
+$$
+
+3) Remaining rows are calculated using the formula:
+$$
+-\frac{1}{b_1}
+\begin{vmatrix}
+b_1 & b_2 \\
+a_1 & a_2
+\end{vmatrix}
+$$
+
+For $s^2$ row:
+$$
+b_1 = 4
+$$
+$$
+\begin{vmatrix}
+4 & 4 \\
+1 & 2
+\end{vmatrix} = 4(2) - 4(1) = 4
+$$
+$$
+-\frac{1}{4}(4) = 1
+$$
+
+Similar calculations for remaining elements yield:
+
+$$
 \begin{array}{c|cccc}
 s^4 & 1 & 2 & 1 & \\
 s^3 & 4 & 4 & 0 & \\
@@ -128,9 +164,16 @@ s^2 & 1 & 1 & & \\
 s^1 & 3 & 0 & & \\
 s^0 & 1 & & & \\
 \end{array}
-\]
+$$
 
-Here, all elements in the first column are positive (1, 4, 1, 3, 1), indicating \textbf{no sign changes}, which means the system is \textbf{stable} with all poles in the left half-plane.
+Stability Analysis:
+1) The first column elements are: [1, 4, 1, 3, 1]
+2) For stability, all elements in the first column must be positive
+3) No sign changes are observed in the first column
+4) Therefore, all roots (poles) of the characteristic equation lie in the left half-plane
+5) Conclusion: The system is stable
+
+The presence of all positive numbers in the first column without any sign changes confirms system stability, as all roots have negative real parts.
 
 \section{Conclusion}
 
